第1题的答案

--- a/javascript/array/1.md
+++ b/javascript/array/1.md
@@ -1,7 +1,7 @@
 
 
-##1. 用javascript，找出var arr=["a","b","a","c","c","a","d"]这个数组中，出现次数最多的元素和出现次数.  
-###分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：
+## 1. 用javascript，找出var arr=["a","b","a","c","c","a","d"]这个数组中，出现次数最多的元素和出现次数.  ## 
+### 分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：###  
 ```javascript  
 var arr = ["a", "b", "c", "a", "c", "z", "d"];
 
@@ -26,5 +26,12 @@ sort_tmp.sort(function(a,b){
 });
 
 console.log(sort_tmp);  
+
+// 输出：
+// [ { key: 'b', value: 1 },
+//   { key: 'd', value: 1 },
+//   { key: 'z', value: 1 },
+//   { key: 'a', value: 2 },
+//   { key: 'c', value: 2 } ]
 ```  
 
