--- a/javascript/array/1.md
+++ b/javascript/array/1.md
@@ -1,7 +1,7 @@
 
 
-## 1. 用javascript，找出var arr=["a","b","a","c","c","a","d"]这个数组中，出现次数最多的元素和出现次数.  ## 
-### 分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：###  
+## 1. 用javascript，找出var arr=["a","b","a","c","c","a","d"]这个数组中，出现次数最多的元素和出现次数.  
+### 分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：
 ```javascript  
 var arr = ["a", "b", "c", "a", "c", "z", "d"];
 
