增加数组去重的题目。

--- a/javascript/array/1.md
+++ b/javascript/array/1.md
@@ -1,7 +1,7 @@
 
 
 ## 1. 用javascript，找出var arr=["a","b","a","c","c","a","d"]这个数组中，出现次数最多的元素和出现次数.  
-### 分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：
+###  分析：基础题，考察对js数组和json的熟悉程度。答案有多种，例如：
 ```javascript  
 var arr = ["a", "b", "c", "a", "c", "z", "d"];
 
@@ -33,5 +33,34 @@ console.log(sort_tmp);
 //   { key: 'z', value: 1 },
 //   { key: 'a', value: 2 },
 //   { key: 'c', value: 2 } ]
-```  
+``` 
 
+## 2.数组var arr=["a","b","a","c","c","a","d"]去重复。  
+### 分析：老话题，实现方法各不相同。  一个巧妙的方法如下：  
+```javascript
+var toObject = function(a) {
+    var o = {};
+    for (var i = 0, j = a.length; i < j; i++) {
+        o[a[i]] = true;
+    }
+    return o;
+};
+var keys = function(o) {
+    var a = [],
+        i;
+    for (i in o) {
+        if (o.hasOwnProperty(i)) {
+            a.push(i);
+        }
+    }
+    return a;
+};
+var uniq = function(a) {
+    return keys(toObject(a));
+};
+
+console.log(uniq(arr));  
+// 输出：[ 'a', 'b', 'c', 'z', 'd' ]
+```  
+#### 1.toObject()函数：先以目标数组的值为key生成一个对象. 这一步是最核心的: 因为在一个对象中, key是无法重复的, 这样就很巧妙的排除了重复值。  
+#### 2.keys()函数：遍历生成的对象, 将这些key取出来放到一个数组中，就OK了。  
