--- a/javascript/array/1.md
+++ b/javascript/array/1.md
@@ -64,3 +64,22 @@ console.log(uniq(arr));
 ```  
 #### 1.toObject()函数：先以目标数组的值为key生成一个对象. 这一步是最核心的: 因为在一个对象中, key是无法重复的, 这样就很巧妙的排除了重复值。  
 #### 2.keys()函数：遍历生成的对象, 将这些key取出来放到一个数组中，就OK了。  
+#### 如果觉得上面代码不太舒服的看下面这个：  
+```javascript
+var temp = {};
+for (var i = 0; i < arr.length; i++) {
+    var item = arr[i];
+    if (temp.hasOwnProperty(item)) {
+        continue;
+    } else {
+        temp[arr[i]] = true;
+    }
+}
+
+var result_array=[];
+for(var k in temp){
+	result_array.push(k);
+}
+console.log(result_array);
+// 输出：[ 'a', 'b', 'c', 'z', 'd' ]
+```
