--- a/javascript/array/1.md
+++ b/javascript/array/1.md
@@ -72,7 +72,7 @@ for (var i = 0; i < arr.length; i++) {
     if (temp.hasOwnProperty(item)) {
         continue;
     } else {
-        temp[arr[i]] = true;
+        temp[item] = true;
     }
 }
 
