模块引用的说明

--- a/javascript/CommonJS/1.md
+++ b/javascript/CommonJS/1.md
@@ -1,3 +1,12 @@
 ## 1.综述
  CommonJS规范为JavaScript制定了一个美好的愿景——希望JavaScript能在任何地方运行。  
- CommonJS规范的提出，主要是为了弥补当时javascript没有标准的缺陷，以达到像Python、Java等语言那样具备开发大型应用的基础能力。期望使用CommonJS API规范写出的应用可以具备跨宿主环境执行的能力。这样，不仅可以用javascript开发富客户端应用，还能开发服务器端的javascript应用程序、命令行工具、桌面图形界面的应用程序以及一些混合的应用。
+ CommonJS规范的提出，主要是为了弥补当时javascript没有标准的缺陷，希望javascript达到像Python、Java等语言那样具备开发大型应用的基础能力，以便使用CommonJS API规范写出的javascript应用可以具备跨宿主环境执行的能力。这样，javascript就不仅可以用开发富客户端应用，还能开发服务器端的javascript应用程序、命令行工具、桌面图形界面的应用程序以及一些混合的应用。  
+
+## 2.模块规范  
+CommonJS对模块的定义主要分为模块引用、模块定义和模块标识3个部分。  
+
+### 2.1 模块引用  
+在CommmonJS规范中，存在一个require()方法，这个方法接受模块标识，以此引入一个模块的API到当前上下文中。  如：  
+```javascript 
+var math=require('math');
+```  
