--- a/javascript/CommonJS/1.md
+++ b/javascript/CommonJS/1.md
@@ -10,3 +10,29 @@ CommonJS对模块的定义主要分为模块引用、模块定义和模块标识
 ```javascript 
 var math=require('math');
 ```  
+### 2.2 模块定义  
+在模块中，上下文提供require()方法来引入外部模块。对应引入的功能，上下文提供了exports对象用于导出当前模块的方法或变量，并且它是唯一的导出出口。在模块中，还存在一个module对象，代表模块本身，而exports是module的属性。  
+在Node中，一个文件就是一个模块，将方法挂载到exports对象上作为属性，即可定义导出的方式。如：  
+```javascript
+// math.js
+exports.add = function() {
+    var sum = 0,
+        i = 0,
+        args = arguments,
+        l = args.length;
+    while (i < l) {
+        sum += args[i++];
+    }
+    return sum;
+};
+```  
+在另一个文件中，我们通过require()方法来引入模块后，就能调用定义的方法或变量了:  
+```javascript
+// program.js
+var math = require('./math.js');
+
+exports.increment = function(val) {
+    return math.add(val, 1);
+};
+```  
+
