--- a/javascript/CommonJS/1.md
+++ b/javascript/CommonJS/1.md
@@ -35,4 +35,9 @@ exports.increment = function(val) {
     return math.add(val, 1);
 };
 ```  
+### 2.3 模块标识  
+模块标识其实就是传递给require()方法的参数，它必须是符合小驼峰命名的字符串，或者以.或..开头的相对路径，或者绝对路径。它可以没有文件名后缀.js。  
 
+## 3.结语  
+模块的定义十分简单，接口也很简洁。它的意义在于将类聚的方法和变量等限定在私有的作用域中，同时又支持引入和导出功能以顺畅的连接上下游依赖。
+CommonJS构建的这套模块导入导出机制使得开发者不必考虑变量污染，相比之下，命名空间等方案就显得没这么方便了。
