引用图片说明模块定义，增加致谢。

--- a/javascript/CommonJS/1.md
+++ b/javascript/CommonJS/1.md
@@ -39,5 +39,11 @@ exports.increment = function(val) {
 模块标识其实就是传递给require()方法的参数，它必须是符合小驼峰命名的字符串，或者以.或..开头的相对路径，或者绝对路径。它可以没有文件名后缀.js。  
 
 ## 3.结语  
-模块的定义十分简单，接口也很简洁。它的意义在于将类聚的方法和变量等限定在私有的作用域中，同时又支持引入和导出功能以顺畅的连接上下游依赖。
-CommonJS构建的这套模块导入导出机制使得开发者不必考虑变量污染，相比之下，命名空间等方案就显得没这么方便了。
+模块的定义十分简单，接口也很简洁。它的意义在于将类聚的方法和变量等限定在私有的作用域中，同时又支持引入和导出功能以顺畅的连接上下游依赖。  
+如图所示：  
+![模块定义示意图](https://github.com/xiashulin/Interview-questions/blob/master/javascript/CommonJS/module-define.jpg?raw=true)  
+每个模块有独立的空间，他们互不干扰，在引用时也显得干净利落。  
+CommonJS构建的这套模块导入导出机制使得开发者不必考虑变量污染，相比之下，命名空间等方案就显得没这么方便了。  
+
+## 4.致谢
+本文引用自朴灵编著的<<深入浅出node.js>>一书，感谢。  
