--- a/javascript/array/3.md
+++ b/javascript/array/3.md
@@ -12,10 +12,10 @@
 举例来说，现在有一个数据集{85, 24, 63, 45, 17, 31, 96, 50}，按照上面的步骤  
 
 第一步：选择中间的一个数作为基数，就选45:  
-* >85, 24, 63, <b>45</b>, 17, 31, 96, 50  
+> 85, 24, 63, <b>45</b>, 17, 31, 96, 50  
 
 第二部：把比45小的放在其左边，比45大的放在其右边，得出如下:  
-* >24, 17, 31, <b>45</b>, 85, 63, 96, 50  
+> 24, 17, 31, <b>45</b>, 85, 63, 96, 50  
 
 第三部：对第二部产生的45左右两边的两个子集，重复进行第一步和第二部。
 
@@ -52,3 +52,4 @@ console.log(quickSort(t));
 // 输出：[ 17, 24, 31, 45, 50, 63, 85, 96 ]
 ```  
 
+### 致谢，本文原自阮一峰老师的快速排序文章，这是[链接](http://www.ruanyifeng.com/blog/2011/04/quicksort_in_javascript.html)，非常感谢。
