--- a/javascript/array/3.md
+++ b/javascript/array/3.md
@@ -52,4 +52,5 @@ console.log(quickSort(t));
 // 输出：[ 17, 24, 31, 45, 50, 63, 85, 96 ]
 ```  
 
-### 致谢，本文原自阮一峰老师的快速排序文章，这是[链接](http://www.ruanyifeng.com/blog/2011/04/quicksort_in_javascript.html)，非常感谢。
+### 致谢  
+本文原自阮一峰老师的快速排序文章，这是[链接](http://www.ruanyifeng.com/blog/2011/04/quicksort_in_javascript.html)，非常感谢。
