--- a/javascript/XMLHttpRequest/1.md
+++ b/javascript/XMLHttpRequest/1.md
@@ -66,3 +66,55 @@ var xhr=createXHR();
 ```javascript  
 xhr.open('get','index.ashx',false);  
 ```  
+这行代码会启动一个针对index.ashx的GET请求，这里index.ashx显然是相对于执行代码的当前页面的URL（当然也可以用绝对路径，<b>URL必须与当前执行页面地址具有相同的域、端口和协议，否则会引发安全错误</b>），open()方法并不会真正发送请求，而只是启动一个请求以备发送。  
+
+要发送特定的请求，必须调用send()方法：  
+```javascript  
+xhr.open('get','index.ashx',false);
+xhr.send(null);
+```  
+send()方法接受一个参数，即要作为请求主体发送的数据。如果不需要发送数据，则传入null，这个参数对有些浏览器来说是必须的。  
+由于这次请求时同步的，javascript代码会等到服务器响应之后再继续执行。在收到响应后，响应的数据会自动填充XHR对象的属性，相关属性如下：  
+* responseText：作为响应主题被返回的文本。  
+* responseXML：如果想要内容类型是“text/xml”或“application/xml”，这个属性中将保存包含着响应数据的XML DOM文档。  
+* status：响应的HTTP状态。  
+* statusText：HTTP状态的说明。  
+接收到响应后，首先应该检查status属性，一般来说，可以将HTTP状态代码200作为成功的标志。此时，responseText属性的内容已经就绪，而且在内容类型正确的情况下，responseXML也应该能够访问了。如果状态代码是304，表示请求的资源没有被修改，可以直接使用浏览器中缓存的版本。  
+一般，为确保接受到适当的响应，应该像下面这样检查响应状态：  
+```javascript  
+xhr.open('get','index.ashx',false);
+xhr.send(null);
+
+if((xhr.status>=200&&xhr.status<300)||xhr.status==304){
+    alert(xhr.responseText);
+}else{
+    alert('Request was unsuccessful:'+xhr.status);
+}
+```  
+
+上面的示例中，我们在open()方法的第三个参数传入了false，表示不使用异步，但多数情况下，我们还是要发送异步请求，才能让JavaScript继续执行而不必等待响应。此时，可以检测XHR对象的readyState属性，该属性表示请求/响应过程的当前活动阶段。这个属性可取的值如下：  
+* 0：未初始化。尚未调用open()方法。  
+* 1：启动。已经调用open()方法，但还未调用send()方法。  
+* 2：发送。已经调用send()方法，但尚未接受到响应。  
+* 3：接受。已经接收到部分响应数据。  
+* 4：完成。已经接收到全部响应数据，而且已经可以在客户端使用了。  
+只要readyState属性的值发生变化，都会触发一次readystatechange事件。可以利用这个事件来检测每次状态变化后readyState的值，这就要求必须在open()之前指定onreadystatechange事件处理程序。如：  
+```javascript
+var xhr=createXHR();
+xhr.onreadystatechange=function(){
+    if(xhr.readyState==4){
+        if((xhr.status>=200&&xhr.status<300)||xhr.status==304){
+            console.log(xhr.responseText);
+        }else{
+            console.log('Request wa unsuccessful:'+xhr.status);
+        }
+    }
+};
+xhr.open('get','index.ashx',true);
+xhr.send(null);
+```  
+在接收到响应之前，还可以调用abort()方法来取消异步请求，如下所示：  
+```javascript  
+xhr.abort();
+``` 
+调用这个方法后，XHR对象会停止触发事件，而且也不再允许访问任何与响应有关的对象属性。在中止请求之后，还应该对XHR对象进行解引用操作。由于内存原因，不建议重用XHR对象。  
