--- a/javascript/XMLHttpRequest/1.md
+++ b/javascript/XMLHttpRequest/1.md
@@ -75,10 +75,11 @@ xhr.send(null);
 ```  
 send()方法接受一个参数，即要作为请求主体发送的数据。如果不需要发送数据，则传入null，这个参数对有些浏览器来说是必须的。  
 由于这次请求时同步的，javascript代码会等到服务器响应之后再继续执行。在收到响应后，响应的数据会自动填充XHR对象的属性，相关属性如下：  
-* responseText：作为响应主题被返回的文本。  
+* responseText：作为响应主体被返回的文本。  
 * responseXML：如果想要内容类型是“text/xml”或“application/xml”，这个属性中将保存包含着响应数据的XML DOM文档。  
 * status：响应的HTTP状态。  
 * statusText：HTTP状态的说明。  
+
 接收到响应后，首先应该检查status属性，一般来说，可以将HTTP状态代码200作为成功的标志。此时，responseText属性的内容已经就绪，而且在内容类型正确的情况下，responseXML也应该能够访问了。如果状态代码是304，表示请求的资源没有被修改，可以直接使用浏览器中缓存的版本。  
 一般，为确保接受到适当的响应，应该像下面这样检查响应状态：  
 ```javascript  
@@ -98,6 +99,7 @@ if((xhr.status>=200&&xhr.status<300)||xhr.status==304){
 * 2：发送。已经调用send()方法，但尚未接受到响应。  
 * 3：接受。已经接收到部分响应数据。  
 * 4：完成。已经接收到全部响应数据，而且已经可以在客户端使用了。  
+
 只要readyState属性的值发生变化，都会触发一次readystatechange事件。可以利用这个事件来检测每次状态变化后readyState的值，这就要求必须在open()之前指定onreadystatechange事件处理程序。如：  
 ```javascript
 var xhr=createXHR();
